Kata practice: kosaraju scc + java